@@ -1,0 +1,3 @@
+#!/usr/bin/perl
+
+require 'lsmb-request.pl';
