@@ -7,6 +7,7 @@ Forthcoming
 * Projects and Departments can now have subprojects and Departments (Chris T)
 * Project/department mechanism generalized to support funds, etc (Chris T)
 * Removed the Config::Std dependency and moved to Config::General (Chris T)
+* Merged in transaction import add-on for 1.4, also for other csv's (Chirs T)
 
 Changelog for 1.3 Series
 Initial Release:  Monday, Oct 12 2011
